Update author summary and titles in author.yaml

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -11,8 +11,8 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - Logic Design Expert
+  - Engineering Manager & Silicon Design Leader
   - Formal Verification Enthusiast
-  - Tech Leader
+  - Building High-Performance Teams
   - Invited Teaching Assistant
   - Crafting Innovation
